human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_30.wast
(assert_invalid
  (module (func $type-loop-value-num-vs-void-after-return
    (block (loop (return) (i32.const 1)))
  ))
  "type mismatch"
)